--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "js-cookie": "^2.2.1",
     "view-design": "^4.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
