--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "js-cookie": "^2.2.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "view-design": "^4.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
